k8s/overlays/local/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: hfts
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    kind: EnvoyProxy
    name: envoy-proxy
    namespace: envoy-gateway-system
    group: gateway.envoyproxy.io
