k8s/overlays/local/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hfts
spec:
  gatewayClassName: hfts
  listeners:
    - name: http
      protocol: HTTP
      port: 10000
